--- a/src/sass/sections/__impression.scss
+++ b/src/sass/sections/__impression.scss
@@ -4,70 +4,53 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-color: $modded-background;
-  padding-bottom: 80px;
-  padding-top: 48px;
-  
+background-color: $modded-background;
+padding-bottom: 80px;
+padding-top: 48px;
 
-  @media screen and (min-width: 1200px) {
-    width: 100%;
-    padding-bottom: 148px;
-    padding-top: 123px;
-    background-position-y: 780px;
-    background-position-x: -100px;
-  // background-position: top 780px right 100px;
-  background-size: 109%;
-  background-repeat: no-repeat;
-  background-image: url("../images/impression-images/dekstop/background-dekstop@1x.webp"),
- url("../images/impression-images/background.webp");
- @media (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
-        background-size: 109%;
-  background-repeat: no-repeat;
-  background-image: url("../images/impression-images/dekstop/background-dekstop@2x.webp"),
- url("../images/impression-images/background.webp");
-      }
-  }
+@media screen and (min-width: 1200px){
+  padding-bottom: 148px;
+padding-top: 123px;
+}
 
-  &__container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
+&__container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 
   &__title {
     width: 300px;
-    color: #ed1c24;
+    color: #ED1C24;
 
+text-align: center;
+font-family: $montserrat-alternas;
+font-size: 22px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+
+    @media screen and (min-width:1200px){
+      width: 970px;
+    color: #ed1c24;
     text-align: center;
     font-family: $montserrat-alternas;
-    font-size: 22px;
+    font-size: 62px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-
-    @media screen and (min-width: 1200px) {
-      width: 970px;
-      color: #ed1c24;
-      text-align: center;
-      font-family: $montserrat-alternas;
-      font-size: 62px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: normal;
     }
   }
 
   &__box-image {
-    width: 119px;
-    height: 199px;
+width: 119px;
+height: 199px;
 
-    @media screen and (min-width: 1200px) {
-      width: 303px;
-      height: 513px;
-    }
+@media screen and (min-width: 1200px){
+  width: 303px;
+height: 513px;
+}
   }
 
   &__text {
@@ -80,7 +63,7 @@
     font-weight: 400;
     line-height: 26px;
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1200px){
       width: 970px;
       font-size: 22px;
       line-height: 35px;
@@ -92,22 +75,28 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-
-    @media screen and (min-width: 480px) {
+    
+    
+    @media screen  and (min-width: 480px){
       min-width: 300px;
-
-      padding-left: 10px;
-      padding-right: 10px;
-      background-size: contain;
-      background-repeat: no-repeat;
+      
+    padding-left: 10px;
+    padding-right: 10px;
+    background-size: contain;
+    background-repeat: no-repeat;
     }
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1200px){
+      width: 1820px;
       display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      padding-left: 0px;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding-left: 0px;
+    padding-right: 100px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url("../images/impression-images/dekstop/background-dekstop@1x.webp");
     }
   }
 
@@ -122,26 +111,26 @@
     font-weight: 700;
     line-height: normal;
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1200px){
       width: 830px;
       color: #221112;
-      text-align: center;
-      font-family: "Montserrat Alternates";
-      font-size: 42px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: normal;
+text-align: center;
+font-family: "Montserrat Alternates";
+font-size: 42px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+
     }
   }
 
   &__image {
-    max-width: 300px;
+      max-width: 300px;
     border-radius: 24px;
-
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1200px){
       min-width: 770px;
-      min-height: 434px;
-      border-radius: 24px;
+    min-height: 434px;
+    border-radius: 24px;
     }
   }
 
@@ -151,47 +140,48 @@
     align-items: center;
     justify-content: center;
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1200px){
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     }
   }
 
-  &__travel-ireland {
+  &__travel-ireland{
+
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1200px){
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     }
   }
 
   &__travel {
     display: none;
-
-    @media screen and (min-width: 1200px) {
+     @media screen and (min-width: 1200px){
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+     }
   }
 
   &__travel-bottom {
     display: none;
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1200px){
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
     }
   }
 
@@ -202,14 +192,15 @@
     align-items: center;
     justify-content: center;
     gap: 10px;
+    
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1200px){
       min-width: 931px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      gap: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 15px;
     }
   }
 
@@ -225,88 +216,88 @@
     padding-left: 4px;
     padding-right: 4px;
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width:1200px){
       display: flex;
-      min-width: 96px;
-      max-width: 628px;
-      height: 50px;
-      justify-content: center;
-      align-items: center;
-      border-radius: 70px;
-      background: #eed7d8;
-      padding-left: 11px;
-      padding-right: 11px;
-    }
-  }
-
-  &__travels {
-    display: flex;
-    color: #221112;
-    text-align: center;
-    font-family: Montserrat;
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 36px;
-
-    @media screen and (min-width: 1200px) {
-      display: flex;
-      color: #221112;
-      text-align: center;
-      font-family: $montserrat;
-      font-size: 22px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 36px;
-    }
-  }
-
-  &__span {
-    display: block;
-    color: #221112;
-    font-family: Montserrat;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 36px;
-    margin-left: 8px;
-  }
-
-  &__button {
-    display: flex;
-    width: 300px;
+    min-width: 96px;
+    max-width: 628px;
     height: 50px;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: #fff;
-    text-align: center;
-    font-family: Montserrat;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 900;
-    line-height: 36px;
     border-radius: 70px;
-    background-color: #ed1c24;
+    background: #eed7d8;
+    padding-left: 11px;
+    padding-right: 11px;
+    }
+  }
 
-    margin-top: 32px;
+  &__travels{
+    display: flex;
+    color: #221112;
+text-align: center;
+font-family: Montserrat;
+font-size: 12px;
+font-style: normal;
+font-weight: 400;
+line-height: 36px;
 
-    @media screen and (min-width: 1200px) {
+@media screen and (min-width: 1200px){
+  display: flex;
+    color: #221112;
+text-align: center;
+font-family: $montserrat;
+font-size: 22px;
+font-style: normal;
+font-weight: 400;
+line-height: 36px;
+}
+
+  }
+
+  &__span{
+    display: block;
+    color: #221112;
+font-family: Montserrat;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 36px;
+margin-left: 8px;  }
+
+  &__button{
+    display: flex;
+width: 300px;
+height: 50px;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+color: #FFF;
+text-align: center;
+font-family: Montserrat;
+font-size: 16px;
+font-style: normal;
+font-weight: 900;
+line-height: 36px;
+border-radius: 70px;
+background-color: #ED1C24;
+
+margin-top:32px;
+
+    @media screen and (min-width: 1200px){
       display: none;
     }
   }
 
-  &__holder {
+  &__holder{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 48px;
+    gap:48px;
     margin-top: 48px;
 
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1200px){
       margin-top: 79px;
-      gap: 135px;
+      gap:135px;
     }
   }
 }
