--- a/src/sass/sections/__work.scss
+++ b/src/sass/sections/__work.scss
@@ -42,7 +42,11 @@
     border-radius: 4px;
     border: dashed #eed7d8;
     margin-bottom: 30px;
-    display: flex;
+
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      align-items: center;
+    }
   }
 
   .place1 {
@@ -50,11 +54,23 @@
     padding-bottom: 60px;
   }
 
-  .work-img {
-    width: 115px;
-    height: 115px;
+  .work-box {
     flex-shrink: 0;
-    padding-left: 70px;
+    width: 80px;
+    height: 80px;
+  }
+
+  .work-img {
+    width: 80px;
+    height: 80px;
+    flex-shrink: 0;
+    padding-left: 25px;
+
+    @media screen and (min-width: 1200px) {
+      padding-left: 70px;
+      width: 100%;
+      height: 115px;
+    }
   }
 
   .work-overlay {
@@ -105,14 +121,24 @@
   }
 
   .work-btn {
-    display: block;
-    height: 80px;
-    width: 370px;
-    gap: 8px;
-    border-radius: 70px;
+    display: flex;
+    width: 300px;
+    height: 50px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
     background: #ed1c24;
     margin-right: auto;
     margin-left: auto;
+    border-radius: 70px;
+
+    @media screen and (min-width: 1200px) {
+      display: block;
+      height: 80px;
+      width: 370px;
+      gap: 8px;
+      border-radius: 70px;
+    }
   }
 
   .work-button {
@@ -123,12 +149,11 @@
     font-style: normal;
     font-weight: 900;
     line-height: 36px; /* 225% */
-    
 
     @media screen and (min-width: 1200px) {
-       font-size: 22px;
-       line-height: 36px; /* 163.636% */
-      }
+      font-size: 22px;
+      line-height: 36px; /* 163.636% */
+    }
   }
 }
 
