--- a/src/sass/sections/__hero.scss
+++ b/src/sass/sections/__hero.scss
@@ -1,8 +1,10 @@
 .hero {
     padding-top: 100px;
     padding-bottom: 26px;
+    padding-left: 2px;
+    padding-bottom: 18px;
     position: relative;
-    background-image: url(.../images/hero-images/mobile/background-1x.webp);
+    background-image: linear-gradient(rgba(237, 28, 36, 0.5), rgba(237, 28, 36, 0.5)), url(../../images/hero-images/desctop/background-1x.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -11,11 +13,11 @@
     @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-        background-image: url(.../images/hero-images/mobile/background-2x.webp), ;
+    background-image: linear-gradient(rgba(237, 28, 36, 0.5), rgba(237, 28, 36, 0.5)), url(../../images/hero-images/desctop/background-2x.webp);
     }
 
     @media screen and (min-width:1200px) {
-        background-image: linear-gradient(rgba(237, 28, 36, 100), rgba(237, 28, 36, 100), url(.../images/hero-images/desctop/background-1x.webp), url(.../images/hero-images/desctop/girl-1x.webp), url(.../images/hero-images/desctop/map-1x.webp), url(.../images/hero-images/desctop/present-1x.webp));
+        background-image: linear-gradient(rgba(237, 28, 36, 0.5), rgba(237, 28, 36, 0.5), url(../../images/hero-images/desctop/background-1x.webp), url(../../images/hero-images/desctop/girl-1x.webp), url(../../images/hero-images/desctop/map-1x.webp), url(../../images/hero-images/desctop/present-1x.webp));
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -23,7 +25,7 @@
         @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
-            background-image: url(.../images/hero-images/desctop/background-2x.webp), url(.../images/hero-images/desctop/girl-2x.webp), url(.../images/hero-images/desctop/map-2x.webp), url(.../images/hero-images/desctop/present-2x.webp);
+        background-image: linear-gradient(rgba(237, 28, 36, 0.5), rgba(237, 28, 36, 0.5)), url(../../images/hero-images/desctop/background-2x.webp), url(../../images/hero-images/desctop/girl-2x.webp), url(../../images/hero-images/desctop/map-2x.webp), url(../../images/hero-images/desctop/present-2x.webp),;
         }
 
         padding-top: 275px;
@@ -32,7 +34,10 @@
 }
 
 .hero-box {
-    margin-right: 10px;
+    display: flex;
+    justify-content: start;
+    flex-direction: column;
+    align-items: start;
 
     @media screen and (min-width: 1200px) {
         margin-left: 375px;
@@ -43,17 +48,20 @@
     position: absolute;
     width: 50px;
     height: 50px;
-    left: 10px;
+    left: 2px;
     top: 20px;
+    width: 50px;
+    height: 50px;
 
     @media screen and (min-width: 1200px) {
         left: 40px;
         top: 30px;
+        width: 100px;
+        height: 100px;
     }
 }
 
 .hero-title-box {
-    max-width: 670px;
     margin-bottom: 24px;
 }
 
@@ -64,7 +72,6 @@
     font-style: normal;
     font-weight: 900;
     line-height: normal;
-    max-width: 300px;
 
     @media screen and (min-width: 1200px) {
         font-size: 52px;
@@ -75,7 +82,7 @@
     max-width: 300px;
 
     @media screen and (min-width: 1200px) {
-       max-width: 669px; 
+        max-width: 669px;
     }
 }
 
@@ -86,7 +93,7 @@
     line-height: 26px;
     font-style: normal;
     font-weight: 600;
-    
+
 
     @media screen and (min-width: 1200px) {
         font-size: 22px;
@@ -110,24 +117,31 @@
 
 .hero-button {
     color: #ED1C24;
-    text-align: center;
     font-family: Montserrat;
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 900;
-    line-height: 36px;
-    /* 163.636% */
     display: flex;
-    width: 370px;
-    height: 80px;
+    width: 300px;
+    height: 50px;
     justify-content: center;
     align-items: center;
     gap: 8px;
     flex-shrink: 0;
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 36px;
+    /* 225% */
     border-radius: 70px;
     background: #FFF;
     box-shadow: 0px 8px 14px 0px rgba(0, 0, 0, 0.40);
-    margin-top: 93px;
+    margin-top: 227px;
+
+    @media screen and (min-width: 1200px) {
+        font-size: 22px;
+        width: 370px;
+        height: 80px;
+        margin-top: 93px;
+    }
 }
 
 /*footer*/
@@ -148,11 +162,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 42px 10px 7px 10px;
 
     @media screen and (min-width: 1200px) {
         display: flex;
         flex-direction: row;
     }
+}
+
+.box {
+    background-color: $footer-background;
 }
 
 .footer-text-box {
@@ -223,7 +242,6 @@
     align-items: center;
 
     @media screen and (min-width:1200px) {
-        max-width: 370px;
         margin-right: 230px;
     }
 }
@@ -273,6 +291,7 @@
     position: fixed;
     left: 0px;
     top: 0px;
+    z-index: 1;
     backdrop-filter: 1px;
     /*transition: opacity 250ms linear , visibility 250ms linear;*/
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -280,14 +299,131 @@
     transition-property: opacity visibility;
 }
 
-.modal-section {
-    width: 1920px;
+.header-modal-section {
+    width: 1200px;
     width: 100%;
     height: 100%;
+    position: relative;
+    background-color: blue;
+    padding: 103px 10px 0px 10px;
 }
 
 .is-hidden {
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
+}
+
+.header-modal-title {
+    color: #FFF;
+    font-family: "Montserrat Alternates";
+    font-size: 36px;
+    font-weight: 900;
+    margin-bottom: 6px;
+    width: 300px;
+
+    @media screen and (min-width: 1200px) {
+        font-size: 78px;
+        width: 400px;
+    }
+}
+
+.header-modal-text {
+    color: #FFF;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    width: 275px;
+
+    @media screen and (min-width: 1200px) {
+        font-size: 24px;
+        line-height: 35px;
+    }
+}
+
+.header-span-1 {
+    color: #FFF;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 34px;
+
+    @media screen and (min-width: 1200px) {
+        font-size: 24px;
+        line-height: 50px;
+    }
+}
+
+.header-span-2 {
+    color: #FFF;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 26px;
+
+    @media screen and (min-width: 1200px) {
+        font-size: 24px;
+        line-height: 35px;
+    }
+}
+
+.header-modal-btn {
+    display: flex;
+    width: 300px;
+    height: 50px;
+    padding-left: 73px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: #ED1C24;
+    text-align: center;
+    font-family: Montserrat;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 36px;
+    border-radius: 70px;
+    background: #FFF;
+    box-shadow: 0px 8px 14px 0px rgba(0, 0, 0, 0.40);
+    position: relative;
+    margin-top: 53px;
+    margin-bottom: 50px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+    @media screen and (min-width: 1200px) {
+        font-size: 22px;
+        width: 463px;
+        height: 80px;
+        margin-bottom: 286px;
+    }
+}
+
+.header-modal-svg {
+    position: absolute;
+    top: 17px;
+    left: 26px;
+    width: 31px;
+    height: 16px;
+    flex-shrink: 0;
+
+    @media screen and (min-width: 1200px) {
+        left: 33px;
+        top: 31px;
+        width: 37px;
+        height: 20px;
+    }
+}
+
+.hero-modal-icon {
+    position: absolute;
+    top: 20px;
+    left: 10px;
+    width: 50px;
+    height: 50px;
 }
