dina_you_give-me_chocolate

--- a/src/partials/certify.html
+++ b/src/partials/certify.html
@@ -3,22 +3,22 @@
     <div class="certify-box">
       <picture class="certify-pic">
         <source
-          media="(max-width:1199px)"
+          media="(max-width: 1199px)"
           srcset="
-            ./images/certify-images/сертіфікат2mobile1x.webp 1x,
-            ./images/certify-images/сертіфікат2mobile2x.webp 2x
+            ../images/certify-images/certificate2-mobile1x.webp 1x,
+            ../images/certify-images/certificate2-mobile2x.webp 2x
           "
         />
         <source
-          media="(min-width:1200px)"
+          media="(min-width: 1200px)"
           srcset="
-            ./images/certify-images/сертіфікат1desktop1x.webp 1x,
-            ./images/certify-images/сертіфікат1desktop2x.webp 2x
+            ../images/certify-images/certificate1-desktop1x.webp 1x,
+            ../images/certify-images/certificate1-desktop2x.webp 2x
           "
         />
         <img
           class="certify-img"
-          src="../images/certify-images/сертіфікат1mobile.webp"
+          src="../images/certify-images/certificate2-mobile1x.webp"
           alt=""
         />
       </picture>
