--- a/src/sass/sections/__work.scss
+++ b/src/sass/sections/__work.scss
@@ -24,10 +24,13 @@
     font-style: normal;
     font-weight: 400;
     line-height: 26px; /* 162.5% */
+    margin-bottom: 40px;
+
 
     @media screen and (min-width: 1200px) {
       font-size: 20px;
       line-height: 35px; /* 175% */
+      margin-bottom: 50px;
     }
   }
 
@@ -58,6 +61,10 @@
     width: 115px;
     height: 115px;
     flex-shrink: 0;
+
+    @media screen and (min-width: 1200px) {
+      margin-right: 59px;
+    }
   }
 
   .work-overlay {
@@ -99,7 +106,6 @@
     padding-bottom: 62px;
 
     @media screen and (min-width: 1200px) {
-      
     }
   }
 
@@ -115,12 +121,17 @@
   .work-btn {
     display: block;
     height: 80px;
-    width: 370px;
     gap: 8px;
     border-radius: 70px;
     background: #ed1c24;
     margin-right: auto;
     margin-left: auto;
+    width: 100%; 
+
+    @media screen and (min-width: 1200px) {
+      width: 370px;
+    }
+
   }
 
   .work-button {
