--- a/src/sass/sections/__trip.scss
+++ b/src/sass/sections/__trip.scss
@@ -155,11 +155,14 @@ border: none;
 @media screen and (min-width:320px) {
     max-width:300px;
     height: 50px;
+    cursor: pointer;
  }
 
 @media screen and (min-width:1200px) { 
     width: 370px;
+    cursor: pointer;
     height: 80px;
+    
 }
 
 
