--- a/src/partials/certify.html
+++ b/src/partials/certify.html
@@ -12,13 +12,13 @@
         <source
           media="(min-width: 1200px)"
           srcset="
-            ../images/certify-images/certificate1-desktop1x.webp 1x,
-            ../images/certify-images/certificate1-desktop2x.webp 2x
+            ./images/certify-images/certificate1-desktop1x.webp 1x,
+            ./images/certify-images/certificate1-desktop2x.webp 2x
           "
         />
         <img
           class="certify-img"
-          src="../images/certify-images/certificate2-mobile1x.webp"
+          src="./images/certify-images/certificate2-mobile1x.webp"
           alt=""
         />
       </picture>
