--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -235,29 +235,37 @@
                             <use href="../images/hero-images/symbol-defs.svg#icon-modal-right"></use>
                         </svg> На головну сторінку</button>
                     <div class="box">
-                        <div class="footer-box"></div>
-                        <div class="footer-box-1">
-                            <h2 class="footer-title">STUDY.UA.</h2>
-                            <div class="footer-text-box">
-                                <p class="footer-text">Київ, вул. Драгомирова, 16
-                                    метро «Дружби Народів»
-                                </p>
+                        <div class="box-footer">
+                            <div class="footer-box-1">
+                                <h2 class="title-footer">STUDY.UA.</h2>
+                                <div class="box-text-footer">
+                                    <p class="text-footer">Київ, вул. Драгомирова, 16 <br>
+                                        метро «Дружби Народів»
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="footer-box-2">
+                                <ul class="footer-list">
+                                    <li class="footer-list">
+                                        <h3 class="footer-title-2">+38 044 500-03-20</h3>
+                                    </li>
+                                    <li class="footer-list">
+                                        <h3 class="footer-title-2">+38 093 000-03-20</h3>
+                                    </li>
+                                    <li class="footer-list">
+                                        <h3 class="footer-title-2">+38 097 000-03-20</h3>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
-                        <div class="footer-box-2">
-                            <h3 class="footer-title-2">+38 044 500-03-20</h3>
-                            <h3 class="footer-title-2">+38 093 000-03-20</h3>
-                            <h3 class="footer-title-2">+38 097 000-03-20</h3>
+                        <div class="footer-box-3">
                         </div>
-                    </div>
-                    <div class="footer-box-3">
-                    </div>
-                    <div class="footer-box-4">
-                        <p class="footer-text-2">Всі права захищені. 1999—2021(c)</p>
+                        <div class="footer-box-4">
+                            <p class="2-text-footer">Всі права захищені. 1999—2021(c)</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 </section>
