--- a/src/sass/sections/__footer.scss
+++ b/src/sass/sections/__footer.scss
@@ -4,15 +4,14 @@
     padding-bottom: 7px;
 
     @media screen and (min-width: 1200px) {
-       padding-top: 122px;
-    padding-bottom: 12px; 
+        padding-top: 122px;
+        padding-bottom: 12px;
     }
 }
 
 .footer-box {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 
     @media screen and (min-width: 1200px) {
@@ -51,7 +50,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
-    text-align: center;
+    width: 370px;
 
     /* 162.5% */
     @media screen and (min-width: 1200px) {
@@ -59,6 +58,7 @@
         font-style: normal;
         font-weight: 400;
         line-height: 47px;
+        width: 300px;
         /* 180.769% */
     }
 
@@ -117,14 +117,4 @@
     font-weight: 400;
     line-height: 47px;
     /* 293.75% */
-}
-
-.footer-box-4 {
-    display: flex;
-    justify-content: center;
-
-    @media screen and (min-width: 1200px) {
-        display: flex;
-        justify-content: start;
-    }
 }
