--- a/src/sass/sections/__hero.scss
+++ b/src/sass/sections/__hero.scss
@@ -157,16 +157,17 @@
     }
 }
 
-.footer-box {
+.box-footer {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     padding: 42px 10px 7px 10px;
+    margin-left: 10px;
 
     @media screen and (min-width: 1200px) {
         display: flex;
         flex-direction: row;
+        margin-left: 375px;
     }
 }
 
@@ -174,7 +175,7 @@
     background-color: $footer-background;
 }
 
-.footer-text-box {
+.box-text-footer {
     max-width: 250px;
 
     @media screen and (min-width: 1200px) {
@@ -182,7 +183,7 @@
     }
 }
 
-.footer-title {
+.title-footer {
     color: $regular-background;
     font-family: Montserrat;
     font-size: 32px;
@@ -197,13 +198,14 @@
     }
 }
 
-.footer-text {
+.text-footer {
     color: $regular-background;
     font-family: Montserrat;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
+    width: 300px;
     text-align: center;
 
     /* 162.5% */
@@ -213,6 +215,7 @@
         font-weight: 400;
         line-height: 47px;
         /* 180.769% */
+        width: 370px;
     }
 
 }
@@ -293,6 +296,8 @@
     top: 0px;
     z-index: 1;
     backdrop-filter: 1px;
+    background-color: blue;
+    overflow-y: scroll;
     /*transition: opacity 250ms linear , visibility 250ms linear;*/
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 250ms;
@@ -300,12 +305,14 @@
 }
 
 .header-modal-section {
-    width: 1200px;
     width: 100%;
     height: 100%;
     position: relative;
-    background-color: blue;
-    padding: 103px 10px 0px 10px;
+    padding-top: 100px;
+
+    @media screen and (min-width: 1200px) {
+        padding-top: 275px;
+    }
 }
 
 .is-hidden {
@@ -320,11 +327,14 @@
     font-size: 36px;
     font-weight: 900;
     margin-bottom: 6px;
+    margin-left: 10px;
     width: 300px;
 
     @media screen and (min-width: 1200px) {
         font-size: 78px;
-        width: 400px;
+        margin-bottom: 23px;
+        margin-left: 375px;
+        width: 863px;
     }
 }
 
@@ -336,10 +346,13 @@
     font-weight: 400;
     line-height: 26px;
     width: 275px;
+    margin-left: 10px;
 
     @media screen and (min-width: 1200px) {
         font-size: 24px;
         line-height: 35px;
+        width: 863px;
+        margin-left: 375px;
     }
 }
 
@@ -393,14 +406,14 @@
     margin-top: 53px;
     margin-bottom: 50px;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 10px;
 
     @media screen and (min-width: 1200px) {
         font-size: 22px;
         width: 463px;
         height: 80px;
         margin-bottom: 286px;
+        margin-left: 375px;
     }
 }
 
@@ -426,4 +439,11 @@
     left: 10px;
     width: 50px;
     height: 50px;
+
+    @media screen and (min-width: 1200px) {
+        width: 100px;
+        height: 100px;
+        left: 40px;
+        top: 30px;
+    }
 }
