--- a/src/sass/sections/__hero.scss
+++ b/src/sass/sections/__hero.scss
@@ -16,15 +16,15 @@
     }
 
     @media screen and (min-width:1200px) {
-        background-image: linear-gradient(rgba(237, 28, 36, 0.5), rgba(237, 28, 36, 0.5)), url(../images/hero-images/desctop/background-1x.webp), url(../images/hero-images/desctop/girl-1x.webp), url(../images/hero-images/desctop/map-1x.webp), url(../images/hero-images/desctop/present-1x.webp);
-        background-position: center;
+        background-image: linear-gradient(rgba(237, 28, 36, 0.5), rgba(237, 28, 36, 0.5)), url(../images/hero-images/desctop/map-1x.webp), url(../images/hero-images/desctop/present-1x.webp), url(../images/hero-images/desctop/girl-1x.webp), url(../images/hero-images/desctop/background-1x.webp);
+        background-position: left, left, left bottom, right, bottom;
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: 100%, 900px, 308px, 900px, 1920px;
 
         @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
-        background-image: linear-gradient(rgba(237, 28, 36, 0.5), rgba(237, 28, 36, 0.5)), url(../images/hero-images/desctop/background-2x.webp), url(../images/hero-images/desctop/girl-2x.webp), url(../images/hero-images/desctop/map-2x.webp), url(../images/hero-images/desctop/present-2x.webp);
+        background-image: linear-gradient(rgba(237, 28, 36, 0.5), rgba(237, 28, 36, 0.5)), url(../images/hero-images/desctop/map-2x.webp), url(../images/hero-images/desctop/present-2x.webp), url(../images/hero-images/desctop/girl-2x.webp), url(../images/hero-images/desctop/background-2x.webp);
         }
 
         padding-top: 275px;
